syntax = "proto3";

package careerup.v1;

option go_package = "github.com/careerup/monorepo/services/api-gateway/proto/careerup/v1;careerupv1";

// AuthService handles authentication-related operations
service AuthService {
  // Register a new user
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  
  // Login an existing user
  rpc Login(LoginRequest) returns (LoginResponse) {}
  
  // Refresh an access token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  
  // Logout a user
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

// RegisterRequest represents the request to register a new user
message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

// RegisterResponse represents the response after successful registration
message RegisterResponse {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

// LoginRequest represents the request to login a user
message LoginRequest {
  string email = 1;
  string password = 2;
}

// LoginResponse represents the response after successful login
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// RefreshTokenRequest represents the request to refresh an access token
message RefreshTokenRequest {
  string refresh_token = 1;
}

// RefreshTokenResponse represents the response after successful token refresh
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// LogoutRequest represents the request to logout a user
message LogoutRequest {
  string refresh_token = 1;
}

// LogoutResponse represents the response after successful logout
message LogoutResponse {
  bool success = 1;
} 